minor adaptions to updated openchemlib